Portofolio 5e commit, Fin HTML et CSS début, je suis sur la partie .hero

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     
     -->
         <header class="header">
-            <div class="container">
+            <div class="container d-flex">
                 <div class="logo"> 
-                    Jean Martial GAHOUSSOU
+                    J. M. GAHOUSSOU
                 </div>
                 <nav class="navbar">
                     <ul class="menu list-unstyled">
@@ -93,14 +93,9 @@
                 </div>
                 <div class="hero__item left">
                     <span>BUSINESS ANALYST JUNIOR</span>
-                    <h1 class="title">Hello, je suis Jean Martial GAHOUSSOU. <br>
-                    Bienvenue sur mon portofolio !
-                    </h1>
+                    <h1 class="title">Hello, je suis Jean Martial GAHOUSSOU.</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nesciunt numquam nisi officiis et qui, natus nobis modi. Doloribus, numquam corrupti iste temporibus dolores obcaecati impedit distinctio sapiente repudiandae itaque!
-                    Omnis ut non voluptates tenetur aspernatur dolores impedit, voluptate, maxime cumque eos suscipit consequuntur sequi fugit deleniti alias possimus nihil recusandae error in reiciendis perspiciatis dignissimos quos vero! Quisquam, fugit!
-                    Odio magnam, impedit cum, perferendis ex iste error fuga doloribus eos repellat autem nisi nesciunt ad ipsa corrupti. Repellat reiciendis, voluptate rem placeat quas harum similique voluptatem maxime aliquid laudantium!
-                    Temporibus earum, cum magnam error in ex hic quisquam veritatis atque unde eum dolores ratione, totam rerum molestias cumque culpa maxime, possimus expedita! Doloribus, dolorum maxime? Similique provident ullam saepe!
-                    Animi unde assumenda, quam soluta cupiditate cum officiis sint ab vero non eligendi! Dignissimos laborum nostrum a praesentium quae omnis adipisci, perferendis excepturi rerum? Debitis vitae porro molestias sed saepe!</p>
+                    Omnis ut non voluptates tenetur aspernatur dolores impedit, voluptate, maxime cumque eos suscipit consequuntur sequi fugit deleniti alias possimus nihil recusandae error in reiciendis perspiciatis dignissimos quos vero!</p>
                 </div>
                 
             </div>
