Portofolio 6e commit, CSS Fin de la partie hero

--- a/index.html
+++ b/index.html
@@ -88,16 +88,20 @@
     <section id="hero" class="hero">
         <div class="container">
             <div class="grid">
-                 <div class="hero__item right">
-                    <img src="./img/Portofolio_img_avatar.png" alt="JM GAHOUSSOU">
-                </div>
                 <div class="hero__item left">
                     <span>BUSINESS ANALYST JUNIOR</span>
-                    <h1 class="title">Hello, je suis Jean Martial GAHOUSSOU.</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nesciunt numquam nisi officiis et qui, natus nobis modi. Doloribus, numquam corrupti iste temporibus dolores obcaecati impedit distinctio sapiente repudiandae itaque!
-                    Omnis ut non voluptates tenetur aspernatur dolores impedit, voluptate, maxime cumque eos suscipit consequuntur sequi fugit deleniti alias possimus nihil recusandae error in reiciendis perspiciatis dignissimos quos vero!</p>
+                    <h1 class="title">Hello, je suis Jean Martial</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nesciunt numquam nisi officiis et qui, natus nobis
+                        modi. Doloribus, numquam corrupti iste temporibus dolores obcaecati impedit distinctio sapiente repudiandae
+                        itaque!
+                        Omnis ut non voluptates tenetur aspernatur dolores impedit, voluptate, maxime cumque eos suscipit consequuntur
+                        sequi fugit deleniti alias possimus nihil recusandae error in reiciendis perspiciatis dignissimos quos vero!</p>
                 </div>
-                
+                 <div class="hero__item right">
+                    <div class="hero__avatar">
+                        <img src="./img/Portofolio_img_avatar.png" alt="JM GAHOUSSOU">
+                    </div>
+                </div>               
             </div>
         </div>
     </section>
