Portofolio 7e commit, CSS fin dela partie About

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
     <section id="About" class="About">
         <div class="container">
             <div class="grid">
-                <div class="gird__item">
-                    <img width="250" height="350" src="./img/Portofolio_img_profil.png" alt="JM GAHOUSSOU">
+                <div class="About__item left">
+                    <img src="./img/Portofolio_img_profil.png" alt="JM GAHOUSSOU">
                 </div>
-                <div class="gird__item">
+                <div class="About__item right">
                     <h2 class="title">À propos de moi</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Mettre en gras </strong> Non nesciunt numquam nisi officiis et qui, natus nobis modi. Doloribus, numquam corrupti iste temporibus dolores obcaecati impedit distinctio sapiente repudiandae itaque!
                     Omnis ut non voluptates tenetur aspernatur dolores impedit, voluptate, maxime cumque eos suscipit consequuntur sequi fugit deleniti alias possimus nihil recusandae error in reiciendis perspiciatis dignissimos quos vero! Quisquam, fugit!
@@ -327,7 +327,7 @@
     </section>
     <section id="Portofolio" class="Portofolio">
         <div class="container">
-            <div class="section-header">
+            <div class="section_header">
                 <h2 class="section-title">Portofolio</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias praesentium assumenda laudantium quos quasi ullam vel nam.</p>
             </div>
@@ -435,7 +435,7 @@
     </section>
     <section id="contact" class="contact">
         <div class="container">
-            <div class="section-header">
+            <div class="section_header">
                 <h2 class="section-title">Contact</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                     Hic, dicta debitis tempore, fugit dolorem illo deserunt dignissimos excepturi aliquid quia nobis doloremque ipsa, placeat error quidem modi labore ex inventore.
