Portofolio 9e commit, CSS fin de la partie Skills et début de la partie Portofolio

--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                 <h2 class="title">Compétences</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
             </div>
-            <div class="grid">
-                <div class="grid__item">
+            <div class="Skills__grid">
+                <div class="Skills__item left">
                     <h3>Domaines de compétences</h3>
                     <ul class="list-unstyled">
                         <li>
@@ -292,7 +292,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="grid__item">
+                <div class="Skills__item right">
                     <h3>Compétence en développement</h3>
                     <div class="progressBar">
                         <div class="bar">HTML</div>
@@ -341,7 +341,7 @@
             </div>
             <ul class="grid Portofolio-filter list-unstyled">
                 <li class="grid__item">
-                    <a href="#">Tous les projets</a>
+                    <a href="#" class="active">Tous les projets</a>
                 </li>
                 <li class="grid__item">
                     <a href="#">Développement web</a>
