Portofolio 11e commit, Fin de la partie Portofolio

--- a/index.html
+++ b/index.html
@@ -438,6 +438,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="grid__item">
+                    <div class="card">
+                        <img src="https://picsum.photos/400/250?random=7" alt="Project 1">
+                        <div class="card__inner">
+                            <h3 class="card__title">Titre projet</h3>
+                            <p class="category">Développement Web</p>
+                        </div>
+                        <div class="card__overlay">
+                            <a href="#">+</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
