--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 </div>
                 <div class="grid__item">
                     <div class="card">
-                        <img src="https://picsum.photos/400/250?random=7" alt="Project 1">
+                        <img src="https://picsum.photos/400/250?random=8" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Développement Web</p>
@@ -482,7 +482,7 @@
     <footer>
         <div class="container">
             <div class="grid">
-                <div class="grid__item">
+                <div class="grid__item left">
                     <p>JM GAHOUSSOU</p>
                 </div>
                 <div class="grid__item">
