--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +7,7 @@
     <meta name="description" content="Page d'exemple pour une business analyst">
     <link rel="icon" href="./img/icon.png" type="image/png">
     <link rel="stylesheet" href="CSS/global.css">
+    <script src="./JS/global.js" defer></script>
 </head>
  
 <body>
