Portofolio 16e commit, Portofolio Javascripts

--- a/index.html
+++ b/index.html
@@ -343,112 +343,113 @@
             </div>
             <ul class="grid Portofolio-filter list-unstyled">
                 <li class="grid__item">
-                    <a href="#" class="active">Tous les projets</a>
+                    <a href="#" class="active" data-filter="all">Tous les projets</a>
                 </li>
                 <li class="grid__item">
-                    <a href="#">Développement web</a>
+                    <a href="#" data-filter="web">Développement web</a>
                 </li>
                 <li class="grid__item">
-                    <a href="#">Refonte graphique</a>
+                    <a href="#" data-filter="design">Refonte graphique</a>
                 </li>
                 <li class="grid__item">
-                    <a href="#">Application</a>
+                    <a href="#" data-filter="app">Application</a>
                 </li>
             </ul>
             <div class="grid">
                 <div class="grid__item">
-                    <div class="card">
+                    <div class="card" data-category="web">
                         <img src="https://picsum.photos/400/250?random=1" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Développement Web</p>
                         </div>
                         <div class="card__overlay">
-                            <a href="#">+</a>
+                            <a href="#" class="card__link" data-id="modal-1">+</a>
                         </div>
                     </div>
+                    <div class="modal" id="modal-1">Modal 1</div>
                 </div>
                 <div class="grid__item">
-                    <div class="card">
-                        <img src="https://picsum.photos/400/250?random=2" alt="Project 1">
+                    <div class="card" data-category="design">
+                        <img src="https://picsum.photos/400/250?random=2" alt="Project 2">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
-                            <p class="category">Développement Web</p>
+                            <p class="category">Refonte graphique</p>
                         </div>
                         <div class="card__overlay">
-                            <a href="#">+</a>
+                            <a href="#" class="card__link">+</a>
                         </div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="card">
-                        <img src="https://picsum.photos/400/250?random=3" alt="Project 1">
+                    <div class="card" data-category="app">
+                        <img src="https://picsum.photos/400/250?random=3" alt="Project 3">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
-                            <p class="category">Développement Web</p>
+                            <p class="category">Application</p>
                         </div>
                         <div class="card__overlay">
-                            <a href="#">+</a>
+                            <a href="#" class="card__link">+</a>
                         </div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="card">
+                    <div class="card" data-category="web">
                         <img src="https://picsum.photos/400/250?random=4" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Développement Web</p>
                         </div>
                         <div class="card__overlay">
-                            <a href="#">+</a>
+                            <a href="#" class="card__link">+</a>
                         </div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="card">
+                    <div class="card" data-category="design">
                         <img src="https://picsum.photos/400/250?random=5" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
-                            <p class="category">Développement Web</p>
+                            <p class="category">Refonte graphique</p>
                         </div>
                         <div class="card__overlay">
-                            <a href="#">+</a>
+                            <a href="#" class="card__link">+</a>
                         </div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="card">
+                    <div class="card" data-category="web">
                         <img src="https://picsum.photos/400/250?random=6" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Développement Web</p>
                         </div>
                         <div class="card__overlay">
-                            <a href="#">+</a>
+                            <a href="#" class="card__link">+</a>
                         </div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="card">
+                    <div class="card" data-category="app">
                         <img src="https://picsum.photos/400/250?random=7" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
-                            <p class="category">Développement Web</p>
+                            <p class="category">Application</p>
                         </div>
                         <div class="card__overlay">
-                            <a href="#">+</a>
+                            <a href="#" class="card__link">+</a>
                         </div>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <div class="card">
+                    <div class="card" data-category="web">
                         <img src="https://picsum.photos/400/250?random=8" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Développement Web</p>
                         </div>
                         <div class="card__overlay">
-                            <a href="#">+</a>
+                            <a href="#" class="card__link">+</a>
                         </div>
                     </div>
                 </div>
