Portofolio 18e commit, fin du portofolio il rest les dernière finitions

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                  <div class="hero__item right">
                     <div class="hero__avatar">
-                        <img src="./img/Portofolio_img_avatar.png" alt="JM GAHOUSSOU">
+                        <img src="./img/Portofolio_img_avatar.png" width="290" height="262" loading="lazy" alt="JM GAHOUSSOU">
                     </div>
                 </div>               
             </div>
@@ -111,7 +111,7 @@
         <div class="container">
             <div class="grid">
                 <div class="About__item left">
-                    <img src="./img/Portofolio_img_profil.png" alt="JM GAHOUSSOU">
+                    <img src="./img/Portofolio_img_profil.png" width="951" height="1100" loading="lazy" alt="JM GAHOUSSOU">
                 </div>
                 <div class="About__item right">
                     <h2 class="title">À propos de moi</h2>
@@ -358,7 +358,7 @@
             <div class="grid">
                 <div class="grid__item">
                     <div class="card" data-category="web">
-                        <img src="https://picsum.photos/400/250?random=1" alt="Project 1">
+                        <img src="https://picsum.photos/400/250?random=1" width="400" height="250" loading="lazy" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Développement Web</p>
@@ -433,7 +433,7 @@
                 </div>
                 <div class="grid__item">
                     <div class="card" data-category="design">
-                        <img src="https://picsum.photos/400/250?random=2" alt="Project 2">
+                        <img src="https://picsum.photos/400/250?random=2" width="400" height="250" loading="lazy" alt="Project 2">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Refonte graphique</p>
@@ -508,7 +508,7 @@
                 </div>
                 <div class="grid__item">
                     <div class="card" data-category="app">
-                        <img src="https://picsum.photos/400/250?random=3" alt="Project 3">
+                        <img src="https://picsum.photos/400/250?random=3" width="400" height="250" loading="lazy" alt="Project 3">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Application</p>
@@ -583,7 +583,7 @@
                 </div>
                 <div class="grid__item">
                     <div class="card" data-category="web">
-                        <img src="https://picsum.photos/400/250?random=4" alt="Project 1">
+                        <img src="https://picsum.photos/400/250?random=4" width="400" height="250" loading="lazy" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Développement Web</p>
@@ -658,7 +658,7 @@
                 </div>
                 <div class="grid__item">
                     <div class="card" data-category="design">
-                        <img src="https://picsum.photos/400/250?random=5" alt="Project 1">
+                        <img src="https://picsum.photos/400/250?random=5" width="400" height="250" loading="lazy" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Refonte graphique</p>
@@ -733,7 +733,7 @@
                 </div>
                 <div class="grid__item">
                     <div class="card" data-category="web">
-                        <img src="https://picsum.photos/400/250?random=6" alt="Project 1">
+                        <img src="https://picsum.photos/400/250?random=6" width="400" height="250" loading="lazy" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Développement Web</p>
@@ -808,7 +808,7 @@
                 </div>
                 <div class="grid__item">
                     <div class="card" data-category="app">
-                        <img src="https://picsum.photos/400/250?random=7" alt="Project 1">
+                        <img src="https://picsum.photos/400/250?random=7" width="400" height="250" loading="lazy" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Application</p>
@@ -883,7 +883,7 @@
                 </div>
                 <div class="grid__item">
                     <div class="card" data-category="web">
-                        <img src="https://picsum.photos/400/250?random=8" alt="Project 1">
+                        <img src="https://picsum.photos/400/250?random=8" width="400" height="250" loading="lazy" alt="Project 1">
                         <div class="card__inner">
                             <h3 class="card__title">Titre projet</h3>
                             <p class="category">Développement Web</p>
