Portofolio 22e commit, update form : Page de remerciment update

--- a/index.html
+++ b/index.html
@@ -969,6 +969,11 @@
             </div>
             
             <form action="https://formsubmit.co/08dfd1c1adf55a447f1539a5b58b7450" method="POST" class="form">
+                
+                <input type="hidden" name="_captcha" value="false">
+                <input type="text" name="_honey" style="display:none">
+                <input type="hidden" name="_next" value="https://jwulfran.github.io/Portofolio/thanks.html">
+
                 <label for="firstname">
                     <input type="text" name="firstname" id="firstname" placeholder="Nom" required>
                 </label>
