--- a/thanks.html
+++ b/thanks.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Merci pour votre message</h1>
     <p>Nous vous recontacterons bientôt</p>
+    <a href="https://jwulfran.github.io/Portofolio/index.html"></a>
     
 </body>
 </html>
