--- a/thanks.html
+++ b/thanks.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Merci pour votre message</h1>
     <p>Nous vous recontacterons bientôt</p>
-    <a href="https://jwulfran.github.io/Portofolio/index.html"></a>
+    <a href="https://jwulfran.github.io/Portofolio/index.html">Retour</a>
     
 </body>
 </html>
